--- a/style.css
+++ b/style.css
@@ -24,3 +24,15 @@ body {
     line-height: 1;
     border-left: 2px solid white;
 }
+
+img {
+    border-radius: 10%;
+    width: 255px;
+    box-shadow: -2px -2px 6px 2px #b3b3b3;
+}
+
+figcaption {
+    font-size: 30px;
+    text-align: center;
+    text-decoration: underline;
+}
