--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ h2 {
     text-transform: uppercase;
 }
 
-.cont-info-ul {
-    list-style-type: none;
+.style-lin-heig {
+    line-height: 1.5;
 }
 
 a {
